Added Touch Test Configuration and properties file edit

--- a/touchtest.properties
+++ b/touchtest.properties
@@ -1,4 +1,4 @@
-TouchTestURL=http://192.168.0.18:8080/concerto
+TouchTestURL=https://touchtestlite.soasta.com/concerto
 TouchTestUserName=CloudTest Lite
 TouchTestPassword=SOASTA
 TouchTestTenant=SOASTA
