--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,24 @@
-apply plugin: 'com.android.application'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    configurations.all{
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
+}
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.soasta.touchtest'
+
+repositories {
+    jcenter()
+}
+
+configurations{
+    compile
+    runtime
+    soasta
+}
 
 android {
     compileSdkVersion 23
@@ -20,25 +39,10 @@ android {
     }
 }
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.soasta.touchtest:touchtest-plugin:1.2'
-    }
-}
-
-apply plugin: 'com.soasta.touchtest'
-
-configurations {
-    soasta
-}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     soasta 'com.soasta.touchtest:touchtestdriver:1.0'
-
 }
