--- a/touchtest.properties
+++ b/touchtest.properties
@@ -1,6 +1,6 @@
 TouchTestURL=https://touchtestlite.soasta.com/concerto
-TouchTestUserName=CloudTest Lite
-TouchTestPassword=SOASTA
+TouchTestUserName=balajivinnakota2@gmail.com
+TouchTestPassword=balaji555
 TouchTestTenant=SOASTA
 OverwriteMobileApp=true
 AppLaunchURL=touchtest-1d5cd-15s1c2s-a4a1aa://
