--- a/SampleAppium/pom.xml
+++ b/SampleAppium/pom.xml
@@ -6,9 +6,34 @@
   
   <dependencies>
   	<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+  	<dependency>
   		<groupId>io.appium</groupId>
   		<artifactId>java-client</artifactId>
   		<version>1.1.0</version>
   	</dependency>
   </dependencies>
+  
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14</version>
+                <executions>
+                    <execution>
+                        <id>acceptance-test</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
